@@ -38,6 +38,10 @@
 <p>2019-01-05  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/pixel_cache.c (SetNexus): Merge IsNexusInCore()
+implementation code into SetNexus() and add check for if
+cache_info-&gt;pixels is null.  Fixes SourceForge issue #588 &quot;Bug in
+IsNexusInCore()&quot;.</li>
 <li>configure.ac (DcrawExtraOptions): Request TIFF output from dcraw
 if build supports TIFF format in order to obtain more metadata.
 This allows obtaining some metadata from standard TIFF tags
